fixed height for mobile view -> horizontal scroller

--- a/src/styles/horizontal-showcase-slider.css
+++ b/src/styles/horizontal-showcase-slider.css
@@ -68,14 +68,6 @@
   transform: translateY(60px);
 }
 
-/* .hrzn-engagement-image {
-  max-width: 600px;
-  width: 100%;
-  border-radius: 30px;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
-  transition: opacity 0.5s ease-in-out;
-} */
-
 .hrzn-engagement-right {
   position: relative;
   overflow: hidden;
@@ -132,6 +124,7 @@
 @media (max-width: 768px) {
   .hrzn-engagement-showcase-section {
     padding: 40px 0px;
+    padding-top: 0px;
     border-radius: 0;
   }
 
@@ -150,6 +143,7 @@
 
   .hrzn-engagement-image {
     margin: 0 auto;
+    height: 92%;
   }
 
   .hrzn-engagement-left {
